--- a/service.html
+++ b/service.html
@@ -15,13 +15,16 @@
   <div class="hero">
     <nav>
       <img src="images/logo.svg" class="logo">
-      <ul>
+      <ul id="navLinklist">
         <li><a href="#" class="hover-line">SERVICES</a></li>
         <li><a href="#" class="hover-line">ABOUT</a></li>
         <li><a href="#" class="hover-line">CARRIER</a></li>
       </ul>
       <div>
         <button class="btn"><a href="">Book a consulation</button></a>
+        <div class="repo-div">
+          <i onclick="toggleMenu()" style="color: azure;" class="fa-solid fa-bars"></i>
+        </div>
     </nav>
     <div class="wrap">
       <h1>We Build Products That</h1>
@@ -34,7 +37,7 @@
     </div>
   </div>
   <div class="lead-image">
-    <img src="images/Product-scale.original.png">
+    <img  src="images/Product-scale.original.png">
   </div>
 
   <div class="had">
@@ -211,6 +214,21 @@
   </div>
 </div>
 
+<script>
+let navLinklist = document.getElementById("navLinklist");
+  navLinklist.style.maxHeight = "0px";
+  
+   function toggleMenu(){
+    console.log("barbara")
+      if (navLinklist.style.maxHeight == "0px")
+       {
+        navLinklist.style.maxHeight = "300px";
+       }
+       else{
+        navLinklist.style.maxHeight = "0px";
+  }
+  }
+  </script>
 
 </body>
 
