--- a/web.html
+++ b/web.html
@@ -5,18 +5,22 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
       <link rel="stylesheet" href="web.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
       <div class="hero">
             <nav>
               <img src="images/logo.svg" class="logo">
-              <ul>
+              <ul id="navLinklist">
                 <li><a href="#" class="hover-line">SERVICES</a></li>
                 <li><a href="#" class="hover-line">ABOUT</a></li>
                 <li><a href="#" class="hover-line">CARRIER</a></li>
               </ul>
               <div>
                 <button class="btn"><a href="">Book a consulation</button></a>
+                <div class="repo-div">
+                  <i style="color: azure;" onclick="toggleMenu()" class="fa-solid fa-bars"></i>
+               </div>
             </nav>
             </div>
       <div class="program">
@@ -266,8 +270,20 @@
     </div>
   </div>
   </div>
-
-
-
+  <script>
+    let navLinklist = document.getElementById("navLinklist");
+      navLinklist.style.maxHeight = "0px";
+      
+       function toggleMenu(){
+        console.log("barbara")
+          if (navLinklist.style.maxHeight == "0px")
+           {
+            navLinklist.style.maxHeight = "300px";
+           }
+           else{
+            navLinklist.style.maxHeight = "0px";
+      }
+      }
+      </script>
 </body>
 </html>
